# auth-flow-cli

./: .gitignore  Cargo.toml  build.sh  readme.md
.github/workflows/: release.yml
src/: main.rs
