[package]
name = "auth-flow"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusoto_core = "0.48.0"
rusoto_cognito_idp = "0.48.0"
tokio = { version = "1.0", features = ["full"] }
rpassword = "5.0"

[[bin]]
name = "auth-auth-cli"
path = "src/main.rs"
